// SPDX-License-Identifier: LGPL-3.0-or-later
/****************************************************************************************
 **
 ** MdtSerialPort
 ** Provides some functionality to configure and interact with serial ports.
 **
 ** Copyright (C) 2025-2025 Philippe Steinmann.
 **
 *****************************************************************************************/
#ifndef MDT_SERIAL_PORT_BYTE_BY_BYTE_WRITER_H
#define MDT_SERIAL_PORT_BYTE_BY_BYTE_WRITER_H

#include "mdt_serialport_export.h"

namespace Mdt{ namespace SerialPort{

  class MDT_SERIALPORT_EXPORT ByteByByteWriter
  {
  };

}} // namespace Mdt{ namespace SerialPort{

#endif // #ifndef MDT_SERIAL_PORT_BYTE_BY_BYTE_WRITER_H
